// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> with \`center\` prop matches with snapshot 1`] = `
<input
  className="sc-bdVaJa fLerWA k-Form-TextInput k-Form-TextInput--andromeda k-Form-TextInput--alignCenter"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`digits\` prop matches with snapshot 1`] = `
<input
  className="sc-bdVaJa fLerWA k-Form-TextInput k-Form-TextInput-hasDigits k-Form-TextInput-hasDigits_12 k-Form-TextInput--andromeda"
  disabled={false}
  name="text"
  style={
    Object {
      "--input-content-width": 12,
    }
  }
/>
`;

exports[`<TextInput /> with \`disabled\` prop matches with snapshot 1`] = `
<input
  className="sc-bdVaJa fLerWA k-Form-TextInput k-Form-TextInput--andromeda k-Form-TextInput--disabled"
  disabled={true}
  name="text"
/>
`;

exports[`<TextInput /> with \`error\` prop matches with snapshot 1`] = `
<input
  className="sc-bdVaJa fLerWA k-Form-TextInput k-Form-TextInput--andromeda k-Form-TextInput--error"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`giant\` prop matches with snapshot 1`] = `
<input
  className="sc-bdVaJa fLerWA k-Form-TextInput k-Form-TextInput--andromeda k-Form-TextInput--giant"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`huge\` prop matches with snapshot 1`] = `
<input
  className="sc-bdVaJa fLerWA k-Form-TextInput k-Form-TextInput--andromeda k-Form-TextInput--huge"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`name\` prop matches with snapshot 1`] = `
<input
  className="sc-bdVaJa fLerWA k-Form-TextInput k-Form-TextInput--andromeda"
  disabled={false}
  name="foobar"
/>
`;

exports[`<TextInput /> with \`tag\` prop matches with snapshot 1`] = `
<input
  className="sc-bdVaJa fLerWA k-Form-TextInput k-Form-TextInput--andromeda"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`tiny\` prop matches with snapshot 1`] = `
<input
  className="sc-bdVaJa fLerWA k-Form-TextInput k-Form-TextInput--andromeda k-Form-TextInput--tiny"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`valid\` prop matches with snapshot 1`] = `
<input
  className="sc-bdVaJa fLerWA k-Form-TextInput k-Form-TextInput--andromeda k-Form-TextInput--valid"
  disabled={false}
  name="text"
/>
`;
